plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.studere'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starter Web (includes Jackson)
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Spring Boot Starter Data JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Spring Boot Starter Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // OpenAI
    implementation("com.openai:openai-java:0.11.0")

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // or jjwt-gson if preferred

    // PostgreSQL Driver
    runtimeOnly 'org.postgresql:postgresql'

    // Spring Boot Starter Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Lombok (optional, to reduce boilerplate)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Tests
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}


tasks.named('test') {
    useJUnitPlatform()
}
